[package]
name = "usi_extract"
version = "0.1.0"
edition = "2021"

[features]

thermo = ["mzdata/thermo"]

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
env_logger = "0.11.7"
log = "0.4.27"
mzdata = { version = "0.52.0", features = ["bruker_tdf", "nalgebra", "serde", "proxi"] }
serde_json = "1.0.140"
